--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,4 @@ github_username:  software-architects
 
 # Build settings
 markdown: kramdown
+exclude: [node_modules, gulpfile.js, package.json, time-cockpit-website.sln]
