--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "time-cockpit-website" # the subpath of your site, e.g. /blog
 url: "https://www.timecockpit.com" # the base hostname & protocol for your site
 twitter_username: timecockpit
 github_username:  software-architects
