--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
-    "bootstrap-sass": "^3.3.6"
+    "bootstrap-sass": "^3.3.6",
+    "jquery": "2.2.4"
   }
 }
