--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-typescript": "^2.13.6",
+    "tsd": "^0.6.5",
     "typescript": "^1.8.10"
   },
   "dependencies": {
