--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "gulp-imagemin": "^3.0.2",
     "gulp-newer": "^1.2.0",
     "gulp-typescript": "^2.13.6",
+    "gulp-uglify": "^2.0.0",
+    "pump": "^1.0.1",
     "tsd": "^0.6.5",
     "typescript": "^1.8.10"
   },
